# a2a-orchestrator

./: Makefile  README.md  env.dist  pyproject.toml
app/: a2a.py  config.py  main.py
tests/: test_a2a.py  test_orchestrator.py
